Fix layout collapse

--- a/src/Section.module.scss
+++ b/src/Section.module.scss
@@ -48,6 +48,7 @@
 .description {
   width: 30vw;
   max-width: 480px;
+  min-width: 0;
 }
 .title {
   margin: 0 0 16px;
